# Eddy3D-Residuals

./: .gitignore  LICENSE  README.md  plot.py  plot_residuals.bat  pyproject.toml
.github/workflows/: main.yml  publish.yml  python-publish.yml
0/postProcessing/: aoa.csv
0/postProcessing/aoa/200/: aoa
22/postProcessing/: aoa.csv
22/postProcessing/aoa/200/: U
45/postProcessing/: aoa.csv
45/postProcessing/aoa/200/: U
openfoam_residuals/: __init__.py  batch_plot.py  filesystem.py  main.py  plot.py  plot_residuals.bat  setup.py
tests/: __init__.py  test_batch_plotting.py  test_plot.py
tests/22/postProcessing/aoa/200/: aoa
tests/files/0/postProcessing/aoa/200/: U
